# commitry

./: .gitignore  OutputOllama.txt  README.md  pyproject.toml
commitry_cli/: cli.py  git_utils.py  llm.py  test_deepseek.py
commitry_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
env/: pyvenv.cfg
